--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,27 @@
 		</plugins>
 	</build>
 
+	<!-- Plugin addition: OWASP dependency checker. -->
+     	<plugin>
+		<groupId>org.owasp</groupId>
+		<artifactId>dependency-check-maven</artifactId>
+		<version>5.3.0</version>
+		
+		<configuration>
+			<format>ALL</format>
+			<failBuildOnCVSS>7</failBuildOnCVSS>
+			<cveValidForHours>168</cveValidForHours>
+		</configuration>
+		
+		<executions>
+			<execution>
+				<goals>
+			    		<goal>check</goal>
+				</goals>
+		    	</execution>
+		</executions>
+	</plugin>
+	
 	<!-- Apache 2 license -->
 	<licenses>
 		<license>
