--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,13 @@
 
 	<dependencies>
 		<!-- Spring and Spring Boot dependencies -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-			<version>2.2.1.RELEASE</version>
+			<version>2.4.1</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
