--- a/pom.xml
+++ b/pom.xml
@@ -47,39 +47,41 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-websocket -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-websocket</artifactId>
 			<version>10.0.0</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-core</artifactId>
 			<version>10.0.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.15.Final</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>5.3.2</version>
 		</dependency>
-		
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
-			<version>5.2.5.RELEASE</version>
+			<version>5.3.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
@@ -226,7 +228,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties 
+						<!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties
 							file is present -->
 						<goals>
 							<goal>build-info</goal>
@@ -262,7 +264,7 @@
 				</executions>
 			</plugin>
 
-			<!-- Spring Boot Actuator displays build-related information if a git.properties 
+			<!-- Spring Boot Actuator displays build-related information if a git.properties
 				file is present at the classpath -->
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
@@ -311,7 +313,7 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			
+
 			<!-- Plugin addition: OWASP dependency checker. -->
 			<plugin>
 				<groupId>org.owasp</groupId>
@@ -334,7 +336,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<!-- Apache 2 license -->
 	<licenses>
 		<license>
