Revert "Added the OWASP dependency checker Maven plugin to pom.xml and upgraded dependencies therein. (#5)"
This reverts commit e6818903d01a5cfda9d3fb197345c47b64215322.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.1</version>
+		<version>2.2.6.RELEASE</version>
 	</parent>
 
 	<name>petclinic</name>
@@ -24,10 +24,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Web dependencies -->
-		<webjars-bootstrap.version>4.5.3</webjars-bootstrap.version>
-		<webjars-jquery-ui.version>1.12.1</webjars-jquery-ui.version>
-		<webjars-jquery.version>3.5.1</webjars-jquery.version>
-		<wro4j.version>1.10.1</wro4j.version>
+		<webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
+		<webjars-jquery-ui.version>1.11.4</webjars-jquery-ui.version>
+		<webjars-jquery.version>2.2.4</webjars-jquery.version>
+		<wro4j.version>1.8.0</wro4j.version>
 
 		<jacoco.version>0.8.5</jacoco.version>
      		<nohttp-checkstyle.version>0.0.4.RELEASE</nohttp-checkstyle.version>
@@ -36,116 +36,104 @@
 
 	<dependencies>
 		<!-- Spring and Spring Boot dependencies -->
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-			<version>2.4.1</version>
+			<version>2.2.1.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-websocket -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-websocket</artifactId>
-			<version>10.0.0</version>
+			<version>9.0.29</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-core</artifactId>
-			<version>10.0.0</version>
+			<version>9.0.29</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.4.27.Final</version>
+			<version>5.4.15.Final</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jcl</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-expression</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-messaging</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>5.3.2</version>
+			<version>5.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -175,13 +163,11 @@
 			<artifactId>hsqldb</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-			<version>8.0.22</version>
+			<version>8.0.19</version>
 		</dependency>
 
 		<!-- caching -->
@@ -230,7 +216,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<executions>
 					<execution>
-						<!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties
+						<!-- Spring Boot Actuator displays build-related information if a META-INF/build-info.properties 
 							file is present -->
 						<goals>
 							<goal>build-info</goal>
@@ -266,7 +252,7 @@
 				</executions>
 			</plugin>
 
-			<!-- Spring Boot Actuator displays build-related information if a git.properties
+			<!-- Spring Boot Actuator displays build-related information if a git.properties 
 				file is present at the classpath -->
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
@@ -314,27 +300,6 @@
 						<version>${webjars-bootstrap.version}</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-
-			<!-- Plugin addition: OWASP dependency checker. -->
-			<plugin>
-				<groupId>org.owasp</groupId>
-				<artifactId>dependency-check-maven</artifactId>
-				<version>5.3.0</version>
-
-				<configuration>
-					<format>ALL</format>
-					<failBuildOnCVSS>7</failBuildOnCVSS>
-					<cveValidForHours>168</cveValidForHours>
-				</configuration>
-
-				<executions>
-					<execution>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
